--- a/configs/osm2mp-navitel/poly.cfg
+++ b/configs/osm2mp-navitel/poly.cfg
@@ -1,5 +1,5 @@
 
-abutters        commercial             # some test 3
+abutters        commercial             
 abutters        industrial              
 abutters        mixed                  
 abutters        residential            
