--- a/configs/osm2mp-navitel/poly.cfg
+++ b/configs/osm2mp-navitel/poly.cfg
@@ -1,4 +1,3 @@
-
 abutters	commercial
 abutters	industrial
 abutters	mixed
@@ -99,8 +98,8 @@ highway		secondary		r	0x03,2		0	2	3,2,0,0,0,0,0,0,0,0,0,0
 highway		secondary_link		r	0x03,2		0	2	2,1,1,0,0,0,0,0,0,0,0,0
 construction	secondary		r	0x47,2		0	2
 
-highway		tertiary		r	0x03,2		0	2	3,1,0,0,0,0,0,0,0,0,0,0
-highway		unclassified		r	0x0a,2		0	2	2,1,0,0,0,0,0,0,0,0,0,0
+highway		tertiary		r	0x03,2		0	1	3,1,0,0,0,0,0,0,0,0,0,0
+highway		unclassified		r	0x0a,2		0	1	2,1,0,0,0,0,0,0,0,0,0,0
 highway		residential		r	0x06,2		0	1	2,0,0,0,0,0,0,0,0,0,0,0
 highway		road			r	0x0a,2		0	1	2,0,0,0,0,0,0,0,0,0,0,0
 
@@ -108,22 +107,26 @@ highway		construction		r	0x47,3		0	2
 
 
 highway		living_street		r	0x07,1		0	1	1,0,0,0,0,0,0,0,0,0,0,0
-highway		pedestrian		r	0x48,2		0	0	0,0,0,0,0,1,1,1,1,0,0,1
+# не роутнинговая т.к. мешает при авто навигации
+highway		pedestrian		l	0x48,2		0	0	0,0,0,0,0,1,1,1,1,0,0,1
 highway		service			r	0x07,2		0	0	1,0,0,0,0,0,0,0,0,0,0,0
-
-highway		steps			r	0x48,1		0	0	0,0,0,0,1,1,1,1,1,0,1,1
+# не роутнинговая т.к. мешает при авто навигации
+highway		steps			l	0x48,1		0	0	0,0,0,0,1,1,1,1,1,0,1,1
 
 highway		unsurfaced		r	0x0a,2		0	1	1,0,0,0,0,0,0,0,0,0,0,0
 
 highway		bridleway		r	0x16,1		0	1	1,0,0,0,1,1,1,1,1,0,0,1
-highway		cycleway		r	0x16,1		0	1	1,0,0,0,1,1,1,1,1,0,0,1
-highway		footway			r	0x48,1		0	0	0,0,0,0,1,1,1,1,1,0,0,1
-highway		path			r	0x48,1		0	0	0,0,0,0,1,1,1,1,1,0,0,1
+# не роутнинговая т.к. мешает при авто навигации 
+highway		cycleway		l	0x16,1		0	1	1,0,0,0,1,1,1,1,1,0,0,1
+# не роутнинговая т.к. мешает при авто навигации 
+highway		footway			l	0x48,1		0	0	0,0,0,0,1,1,1,1,1,0,0,1
+# не роутнинговая т.к. мешает при авто навигации 
+highway		path			l	0x48,1		0	0	0,0,0,0,1,1,1,1,1,0,0,1
 
 highway		track			r	0x16,1		0	1	1,0,0,0,0,0,0,1,0,0,0,0
-tracktype	grade1			r	0x0a,2		0	2	1,0,0,0,0,0,0,1,0,0,0,0
-tracktype	grade2			r	0x0a,2		0	2	1,0,0,0,0,0,0,1,0,0,0,0
-tracktype	grade3			r	0x16,2		0	2	1,0,0,0,0,0,0,1,0,0,0,0
+tracktype	grade1			r	0x0a,2		0	1	1,0,0,0,0,0,0,1,0,0,0,0
+tracktype	grade2			r	0x0a,2		0	1	1,0,0,0,0,0,0,1,0,0,0,0
+tracktype	grade3			r	0x16,2		0	1	1,0,0,0,0,0,0,1,0,0,0,0
 tracktype	grade4			r	0x16,2		0	1	0,0,0,0,0,0,0,1,0,0,0,0
 tracktype	grade5			r	0x16,2		0	1	0,0,0,0,0,0,0,1,0,0,0,0
 
@@ -210,7 +213,8 @@ place		town
 place		village
 
 power		generation
-power		line			l	0x29		0	2
+#только на 0 слой
+power		line			l	0x29		0	0
 power		sub_station
 
 railway		rail			l	0x14		0	3
