--- a/configs/osm2mp-navitel/poly.cfg
+++ b/configs/osm2mp-navitel/poly.cfg
@@ -108,20 +108,20 @@ highway		construction		r	0x47,3		0	2
 
 highway		living_street		r	0x07,1		0	1	1,0,0,0,0,0,0,0,0,0,0,0
 # не роутнинговая т.к. мешает при авто навигации
-highway		pedestrian		l	0x48,2		0	0	0,0,0,0,0,1,1,1,1,0,0,1
+highway		pedestrian		l	0x48,2		0	0
 highway		service			r	0x07,2		0	0	1,0,0,0,0,0,0,0,0,0,0,0
 # не роутнинговая т.к. мешает при авто навигации
-highway		steps			l	0x48,1		0	0	0,0,0,0,1,1,1,1,1,0,1,1
+highway		steps			l	0x48,1		0	0
 
 highway		unsurfaced		r	0x0a,2		0	1	1,0,0,0,0,0,0,0,0,0,0,0
 
 highway		bridleway		r	0x16,1		0	1	1,0,0,0,1,1,1,1,1,0,0,1
 # не роутнинговая т.к. мешает при авто навигации 
-highway		cycleway		l	0x16,1		0	1	1,0,0,0,1,1,1,1,1,0,0,1
+highway		cycleway		l	0x16,1		0	1
 # не роутнинговая т.к. мешает при авто навигации 
-highway		footway			l	0x48,1		0	0	0,0,0,0,1,1,1,1,1,0,0,1
+highway		footway			l	0x48,1		0	0
 # не роутнинговая т.к. мешает при авто навигации 
-highway		path			l	0x48,1		0	0	0,0,0,0,1,1,1,1,1,0,0,1
+highway		path			l	0x48,1		0	0
 
 highway		track			r	0x16,1		0	1	1,0,0,0,0,0,0,1,0,0,0,0
 tracktype	grade1			r	0x0a,2		0	1	1,0,0,0,0,0,0,1,0,0,0,0
