--- a/configs/osm2mp-navitel/poi.cfg
+++ b/configs/osm2mp-navitel/poi.cfg
@@ -1,5 +1,6 @@
 #					type		levels (default: 0   1)
 
+
 aeroway		aerodrome		0x5900		0	2
 aeroway		helipad			0x5904
 aeroway		terminal		0x2f04		0	2
@@ -51,6 +52,11 @@ amenity		townhall		0x3003		0	0
 amenity		veterinary		0xf802		0	0
 amenity		university		0xf504		0	0
 
+barrier         bollard                 0xF207        0       0
+barrier         gate	                0xF207        0       0
+barrier		border_control		0x3006		0	2
+barrier		toll_booth		0x2500
+
 highway		bus_stop		0x2F08		0	0
 highway		cattle_grid
 highway		crossing
@@ -58,7 +64,7 @@ highway		ford			0xf307
 highway		gate
 highway		incline
 highway		incline_steep
-highway		mini_roundabout
+highway		mini_roundabout		0xf20c
 highway		motorway_junction
 highway		services
 highway		stile
@@ -77,7 +83,7 @@ historic	museum			0x2C02		0	2
 historic	ruins			0x2C02		0	2
 
 landuse		allotments		0x1100
-landuse		basin			0x6603
+landuse		basin			0x2d09
 landuse		brownfield
 landuse		cemetery		0x6403
 landuse		commercial
@@ -153,19 +159,20 @@ natural		volcano
 natural		water			0x650D
 natural		wood			0x660A
 
+place		city			0x0300		0	4	city
+place		town			0x0800		0	3	city
+place		village			0x0C00		0	2	city
+place		hamlet			0x0F00		0	2	city
+
 place		airport			0x5900		0	2
-place		city			0x0300		0	4	City=Y
 place		continent
 place		country
 place		county
-place		hamlet			0x0F00		0	2	City=Y
 place		island			0x650C		0	2
-place		locality		0x0F00		0	2	City=Y
+place		locality		0x0F00		0	2	city
 place		region
 place		state
 place		suburb			0x1F00		0	2
-place		town			0x0800		0	3	City=Y
-place		village			0x0C00		0	2	City=Y
 
 power		generation
 power		sub_station
@@ -176,12 +183,13 @@ railway		halt			0xf006
 railway		level_crossing		0xf20b
 railway		station			0xf006
 railway		subway_entrance		0xf005		0	0
-railway		tram_stop		0x2F08		0	0
+railway		tram_stop		0xf003		0	0
 railway		turntable
 railway		viaduct			0x6401
 
+shop		adult			0xf709
 shop		bakery			0x2A0E		0	0
-shop		bicycle			0x2F00		0	0
+shop		bicycle			0xF707		0	0
 shop		books			0x2E0A		0	0
 shop		butcher			0x2E02		0	0
 shop		car			0x2F07
@@ -253,14 +261,11 @@ tourism		theme_park		0x2c01
 tourism		viewpoint		0x6600		0	2
 tourism		zoo			0x2C07
 
-traffic_calming	yes			0xf204		0	0
-traffic_calming	bump			0xf204		0	0
-traffic_calming	cushion			0xf204		0	0
-traffic_calming	hump			0xf204		0	0
-traffic_calming	table			0xf204		0	0
-
-barrier		border_control		0x3006		0	2
-barrier		toll_booth		0x2500
+traffic_calming	yes			0xF204		0	0
+traffic_calming	bump			0xF204		0	0
+traffic_calming	cushion			0xF204		0	0
+traffic_calming	hump			0xF204		0	0
+traffic_calming	table			0xF204		0	0
 
 waterway	aqueduct
 waterway	boatyard
