--- a/configs/osm2mp-navitel/poly.cfg
+++ b/configs/osm2mp-navitel/poly.cfg
@@ -20,8 +20,10 @@ amenity		college			p	0x0a
 amenity		fountain
 amenity		grave_yard		p	0x1a
 amenity		hospital		p	0x0b
+amenity		marketplace             p       undef           0       1      0xf701,0,0
 amenity		parking			p	0x05
 amenity		parking_garage		p	0x06
+amenity         pharmacy                p       0x06e,3         0       1      0x2e05,0,1
 amenity		public_building		p	0x6e
 amenity		school			p	0x0a
 amenity		taxi
@@ -29,44 +31,48 @@ amenity		townhall
 amenity		university		p	0x0a
 amenity		kindergarten		p	0x6e
 
+#boundary        administrative
+admin_level     10                      p       0x03,1          0       2
 admin_level	8			p	0x02,1		0	2
 admin_level	6			l	0x1d,1		0	3
-admin_level	5			l	0x1d,1		0	3
 admin_level	4			l	0x1c,1		0	4
 admin_level	2			l	0x1e,1		0	4
+admin_level	5			l	0x1d,1		0	3
+boundary	administrative		l	0x1d		2	2
 
 barrier		fence			l	0x46		0	0
 barrier		hedge			l	0x46		0	0
 barrier		wall			l	0x46		0	0
 
-boundary	administrative		l	0x1d		2	2
 boundary	civil
 boundary	national_park
 boundary	political
 
-building	yes			p	0x13		0	0
-building	bank			p	0x13		0	0
-building:type	house			p	0x6c,1		0	0
-building	administrative		p	0x13		0	0
-building	cafe			p	0x13		0	0
-building	church			p	0x13		0	0
-building	college			p	0x0a		0	0
-building	construction		p	0x13		0	0
-building	fire_station		p	0x13		0	0
-building	fuel			p	0x13		0	0
-building	garage			p	0x13		0	0
-building	garages			p	0x13		0	0
-building	hospital		p	0x13		0	0
-building	industrial		p	0x13		0	0
-building	kindergarten		p	0x13		0	0
-building	market			p	0x13		0	0
-building	public			p	0x13		0	0
-building	residential		p	0x13		0	0
-building	school			p	0x13		0	0
-building	shop			p	0x13		0	0
-building	sport			p	0x13		0	0
-building	theatre			p	0x13		0	0
-building	university		p	0x13		0	0
+building        yes                     p       0x13,2          0       0
+building        administrative          p       0x6d            0       0
+building        apartments              p       0x6c            0       0
+building        cafe                    p       0x6e            0       0
+building        church                  p       0x6e            0       0
+building        college                 p       0x6e            0       0
+building        construction            p       0x13            0       0
+building        dormitory               p       0x6c            0       0
+building        fire_station            p       0x6d            0       0
+building        fuel                    p       0x13            0       0
+building        garage                  p       0x6f            0       0
+building        garages                 p       0x06            0       0
+building        hospital                p       0x6e            0       0
+building        house                   p       0x6c            0       0
+building        industrial              p       0x6f            0       0
+building        kindergarten            p       0x6e            0       0
+building        market                  p       0x6e            0       0
+building        office                  p       0x6d            0       0
+building        public                  p       0x6e            0       0
+building        residential             p       0x6c            0       0
+building        school                  p       0x6e            0       0
+building        shop                    p       0x6e            0       0
+building        sport                   p       0x6e            0       0
+building        theatre                 p       0x6e            0       0
+building        university              p       0x6e            0       0
 
 contour		elevation		l	0x20
 contour_ext	elevation_minor		l	0x20
@@ -79,48 +85,48 @@ cycleway	opposite_lane		l	0x16		0	0
 cycleway	opposite_track		l	0x16		0	0
 cycleway	track			l	0x16		0	0
 
+            # RouteParams=speed,class,oneway,toll,emergency,delivery,car,bus,taxi,foot,bike,truck
 
-# RouteParams=speed,class,oneway,toll,emergency,delivery,car,bus,taxi,foot,bike,truck
-
-highway		motorway		r	0x01,2		0	4	6,4,1,0,0,0,0,0,0,0,0,0
+highway		motorway			r	0x01,2		0	4	6,4,1,0,0,0,0,0,0,0,0,0
 highway		motorway_link		r	0x01,2		0	4	2,4,1,0,0,0,0,0,0,0,0,0
-construction	motorway		r	0x47,2		0	4
 
 highway		trunk			r	0x01,2		0	4	5,3,0,0,0,0,0,0,0,0,0,0
-highway		trunk_link		r	0x01,2		0	2	2,3,0,0,0,0,0,0,0,0,0,0
-construction	trunk			r	0x47,2		0	4
+highway		trunk/city      		r	0x04,2		0	4	4,3,0,0,0,0,0,0,0,0,0,0
+highway		trunk_link			r	0x01,2		0	2	2,3,0,0,0,0,0,0,0,0,0,0
 
 highway		primary			r	0x02,2		0	3	4,3,0,0,0,0,0,0,0,0,0,0
+highway		primary/city		r	0x04,2		0	3	3,2,0,0,0,0,0,0,0,0,0,0
 highway		primary_link		r	0x02,2		0	3	2,2,0,0,0,0,0,0,0,0,0,0
-construction	primary			r	0x47,2		0	3
 
 highway		secondary		r	0x03,2		0	2	3,2,0,0,0,0,0,0,0,0,0,0
+highway         secondary/city          r       0x05,2          0       1       3,2,0,0,0,0,0,0,0,0,0,0
 highway		secondary_link		r	0x03,2		0	2	2,1,1,0,0,0,0,0,0,0,0,0
-construction	secondary		r	0x47,2		0	2
 
 highway		tertiary		r	0x03,2		0	1	3,1,0,0,0,0,0,0,0,0,0,0
+highway         tertiary/city           r       0х06,2          0       1       3,1,0,0,0,0,0,0,0,0,0,0
+
 highway		unclassified		r	0x0a,2		0	1	2,1,0,0,0,0,0,0,0,0,0,0
+highway         unclassified/city       r       0x06,2          0       1       2,1,0,0,0,0,0,0,0,0,0,0
 highway		residential		r	0x06,2		0	1	2,0,0,0,0,0,0,0,0,0,0,0
 highway		road			r	0x0a,2		0	1	2,0,0,0,0,0,0,0,0,0,0,0
 
-highway		construction		r	0x47,3		0	2
-
+surface         compacted               r       0x42,3          0       1       2,0,0,0,0,0,0,0,0,0,0,0
+surface         gravel                  r       0x42,3          0       1       2,0,0,0,0,0,0,0,0,0,0,0
+surface         unpaved                 r       0x0a,3          0       1       1,0,0,0,0,0,0,0,0,0,0,0
+surface         ground                  r       0x0a,3          0       1       1,0,0,0,0,0,0,0,0,0,0,0
 
 highway		living_street		r	0x07,1		0	1	1,0,0,0,0,0,0,0,0,0,0,0
-# не роутнинговая т.к. мешает при авто навигации
 highway		pedestrian		l	0x48,2		0	0
 highway		service			r	0x07,2		0	0	1,0,0,0,0,0,0,0,0,0,0,0
-# не роутнинговая т.к. мешает при авто навигации
+highway		construction		l	0x07,3		0	2
+
 highway		steps			l	0x48,1		0	0
 
 highway		unsurfaced		r	0x0a,2		0	1	1,0,0,0,0,0,0,0,0,0,0,0
 
 highway		bridleway		r	0x16,1		0	1	1,0,0,0,1,1,1,1,1,0,0,1
-# не роутнинговая т.к. мешает при авто навигации 
 highway		cycleway		l	0x16,1		0	1
-# не роутнинговая т.к. мешает при авто навигации 
 highway		footway			l	0x48,1		0	0
-# не роутнинговая т.к. мешает при авто навигации 
 highway		path			l	0x48,1		0	0
 
 highway		track			r	0x16,1		0	1	1,0,0,0,0,0,0,1,0,0,0,0
@@ -130,6 +136,7 @@ tracktype	grade3			r	0x16,2		0	1	1,0,0,0,0,0,0,1,0,0,0,0
 tracktype	grade4			r	0x16,2		0	1	0,0,0,0,0,0,0,1,0,0,0,0
 tracktype	grade5			r	0x16,2		0	1	0,0,0,0,0,0,0,1,0,0,0,0
 
+railway         platform                r       0x16,1          0       1       0,0,0,0,1,1,1,1,1,0,1,1
 
 route		ferry			r	0x1A,2		0	2	0,0,0,0,0,0,0,0,0,0,0,0
 
@@ -137,7 +144,7 @@ junction	roundabout		r	0x0c,3		0	2	4,3,1,0,0,0,0,0,0,0,0,0
 
 
 landuse		allotments		p	0x03		0	2
-landuse		basin
+landuse         basin                  	p	0x41		0	3
 landuse		brownfield
 landuse		cemetery		p	0x1a		0	1
 landuse		commercial		p	0x08		0	2
@@ -153,7 +160,7 @@ landuse		military		p	0x04		0	1
 landuse		quarry
 landuse		railway
 landuse		recreation_ground
-landuse		reservoir
+landuse         reservoir              	p	0x40		0	3
 landuse		residential		p	0x02,1		0	2
 landuse		retail			p	0x08		0	2
 landuse		village_green
@@ -161,8 +168,8 @@ landuse		village_green
 leisure		common
 leisure		fishing
 leisure		garden
-leisure		golf_course
-leisure		marina
+leisure         golf_course             p       0x18            0       1
+leisure         marina                  p       0x09            0       1
 leisure		nature_reserve
 leisure		park			p	0x17		0	1
 leisure		pitch			p	0x19		0	1
@@ -172,8 +179,8 @@ leisure		stadium			p	0x19		0	1
 leisure		track
 leisure		water_park
 
-man_made	pier
-man_made	pipeline
+man_made        pier                    s       0x15
+man_made        pipeline                l       0x28            0       1
 man_made	reservoir_covered
 man_made	wastewater_plant
 
@@ -184,7 +191,7 @@ military	naval_base		p	0x04
 military	range
 
 natural		bay
-natural		beach
+natural         beach                   p       0x89            0       1       0x5400,0,1
 natural		cave_entrance
 natural		cliff
 natural		coastline		s	0x15,3		0	4
@@ -213,7 +220,6 @@ place		town
 place		village
 
 power		generation
-#только на 0 слой
 power		line			l	0x29		0	0
 power		sub_station
 
@@ -227,14 +233,15 @@ service		siding			l	0x14,1		0	1
 service		spur			l	0x14,1		0	1
 service		yard			l	0x14,1		0	1
 
+
 railway		abandoned
 railway		disused
 railway		light_rail		l	0x14		0	1
-railway		monorail
+railway         monorail                l       0x40		0       2
 railway		narrow_gauge		l	0x14		0	1
 railway		preserved
 railway		subway
-railway		tram
+railway         tram                    l       0x3f		0       0
 railway		turntable
 
 route		bus
@@ -246,8 +253,12 @@ route		ski
 route		subsea
 route		tour
 
-shop		kiosk
-shop		supermarket		p	0x08		0	1
+shop            car                     p       0x6e,3          0       1      0x2F07,0,1
+shop            convenience             p       0x6e,3          0       1      0x2e06,0,1
+shop            furniture               p       0x6e,3          0       1      0x2E09,0,1
+shop            kiosk                  
+shop            mall                    p       0x08,3          0       1      0x2E04,0,1
+shop            supermarket             p       0x08,3          0       1      0x2E04,0,1
 
 sport		10pin
 sport		athletics
@@ -288,7 +299,7 @@ tourism		camp_site
 tourism		caravan_site
 tourism		museum
 tourism		picnic_site
-tourism		zoo
+tourism         zoo                     p	0x17            0       1       0x2C07,0,1
 
 waterway	canal			l	0x1f		0	2
 waterway	dam
