--- a/configs/osm2mp-navitel/poi.cfg
+++ b/configs/osm2mp-navitel/poi.cfg
@@ -5,13 +5,13 @@ aeroway		aerodrome		0x5900		0	2
 aeroway		helipad			0x5904
 aeroway		terminal		0x2f04		0	2
 
-amenity		arts_centre
+amenity      	arts_centre		0x2c09
 amenity		atm			0xf601		0	0
 amenity		bank			0x2F06		0	0
 amenity		bicycle_parking
 amenity		bicycle_rental
 amenity		biergarten		0x4600		0	0
-amenity		bureau_de_change
+amenity		bureau_de_change		0x2f06
 amenity		bus_station		0xf001		0	0
 amenity		cafe			0x2A0E
 amenity		car_rental		0x2F02		0	0
@@ -29,6 +29,7 @@ amenity		fountain		0xf302		0	0
 amenity		fuel			0x2F01		0	2
 amenity		grave_yard		0x6403		0	0
 amenity		hospital		0x3002		0	0
+amenity		kindergarten		0xf501		0	0
 amenity		library			0x2C03		0	0
 amenity		nightclub		0x2D02
 amenity		parking			0x2F0B		0	0
@@ -42,8 +43,9 @@ amenity		pub			0x2D02
 amenity		public_building		0x6405
 amenity		recycling
 amenity		restaurant		0x4500
+amenity		sauna			0xf603
 amenity		school			0x2C05		0	0
-amenity		kindergarten		0xf501		0	0
+amenity		shelter			0x6100
 amenity		taxi
 amenity		telephone		0x5100		0	0
 amenity		theatre			0x2D01
@@ -74,13 +76,16 @@ highway		traffic_signals		0xf201		0	0
 highway		turning_circle
 highway		viaduct
 
-historic	archaeological_site	0x2C02		0	2
-historic	battlefield		0x2C02		0	2
+historic	archaeological_site	0x2C04		0	2
+historic	battlefield		0x2C04		0	2
 historic	castle			0x2c04		0	2
 historic	memorial		0xf301		0	2
 historic	monument		0xf301		0	2
 historic	museum			0x2C02		0	2
-historic	ruins			0x2C02		0	2
+historic	ruins			0x2C04		0	2
+
+internet_access terminal                0xf616        0       0
+internet_access wlan                    0xf615        0       0
 
 landuse		allotments		0x1100
 landuse		basin			0x2d09
@@ -106,7 +111,7 @@ leisure		common
 leisure		fishing			0x4100
 leisure		garden
 leisure		golf_course
-leisure		marina			0x1200
+leisure		marina			0x4300
 leisure		nature_reserve		0x6612
 leisure		park			0x2C06
 leisure		pitch
@@ -155,6 +160,7 @@ natural		peak			0x6616
 natural		scree
 natural		scrub
 natural		spring			0x6414
+natural		tree			0xf404
 natural		volcano
 natural		water			0x650D
 natural		wood			0x660A
@@ -187,31 +193,46 @@ railway		tram_stop		0xf003		0	0
 railway		turntable
 railway		viaduct			0x6401
 
-shop		adult			0xf709
-shop		bakery			0x2A0E		0	0
-shop		bicycle			0xF707		0	0
-shop		books			0x2E0A		0	0
-shop		butcher			0x2E02		0	0
-shop		car			0x2F07
-shop		car_repair		0x2F03
-shop		chemist			0xf704		0	0
-shop		clothes			0x2E07		0	0
-shop		convenience		0x2e06		0	0
-shop		computer		0x2E0B		0	0
-shop		department_store	0x2E01
-shop		doityourself		0x2e0a		0	0
-shop		dry_cleaning		0xf604		0	0
-shop		electronics		0xf705		0	0
-shop		furniture		0x2E09		0	0
-shop		garden_centre		0x2E08		0	0
-shop		grocery			0x2E02		0	0
-shop		hardware		0x2E06		0	0
-shop		kiosk			0x2e06		0	0
-shop		laundry			0xf604		0	0
-shop		mall			0x2E04
-shop		outdoor			0xf707		0	0
-shop		stationery		0x2E0A		0	0
-shop		supermarket		0x2e00		0	0
+shop            adult                   0xf709
+shop            alcohol                 0x2e00
+shop            bakery                  0x2A0E
+shop            beverages               0x2e02
+shop            bicycle                 0xF707
+shop            books                   0x2E0A
+shop            butcher                 0x2E02
+shop            car                     0x2F07
+shop            car_repair              0x2F03
+shop            chemist                 0xf704
+shop            clothes                 0x2E07
+shop            convenience             0x2e06
+shop            computer                0x2E0B
+shop            department_store        0x2E01
+shop            doityourself            0x2E08
+shop            drugstore               0x2e05
+shop            dry_cleaning            0xf604
+shop            electronics             0x2E0A
+shop            fashion                 0x2e07
+shop            florist                 0xf70a
+shop            furniture               0x2E09
+shop            garden_centre           0x2E08
+shop            general                 0x2e06
+shop            grocery                 0x2E02
+shop            hairdresser             0xf602
+shop            hardware                0x2E06
+shop            jewelry                 0xf70b
+shop            kiosk                   0x2E02
+shop            laundry                 0x2F00
+shop            mall                    0x2E04
+shop            newsagent               0x2e00
+shop            optician                0x2e05
+shop            outdoor                 0xF707
+shop            shoes                   0xf702
+shop            sports                  0xf707
+shop            stationery              0x2E0A
+shop            supermarket             0x2E04
+shop            toys                    0x2e00
+shop            travel_agency           0xf613
+shop            video                   0x2e00
 
 sport		10pin
 sport		athletics
@@ -229,10 +250,10 @@ sport		dog_racing
 sport		equestrian
 sport		football
 sport		golf			0x2D05
-sport		gymnastics
-sport		hockey
-sport		horse_racing
-sport		motor
+sport           gymnastics              0x2d0a
+sport           hockey                  0x2d08
+sport           horse_racing
+sport           motor                   0x2f0d
 sport		multi
 sport		orienteering
 sport		pelota
@@ -258,7 +279,7 @@ tourism		motel			0x2B01
 tourism		museum			0x2C02		0	2
 tourism		picnic_site		0x4a00		0	2
 tourism		theme_park		0x2c01
-tourism		viewpoint		0x6600		0	2
+tourism		viewpoint		0x5200		0	2
 tourism		zoo			0x2C07
 
 traffic_calming	yes			0xF204		0	0
