--- a/configs/osm2mp-navitel/poly.cfg
+++ b/configs/osm2mp-navitel/poly.cfg
@@ -8,29 +8,51 @@ aerialway	cable_car
 aerialway	chair_lift
 aerialway	drag_lift
 
-aeroway		apron
+aeroway		apron			p 0x07    0 1
 aeroway		runway			l	0x27		0	2
 aeroway		taxiway			l	0x06		0	1
 aeroway		terminal		p	0x07
 
-amenity		bicycle_parking
-amenity		car_rental
-amenity		car_sharing
-amenity		college			p	0x0a
-amenity		fountain
-amenity		grave_yard		p	0x1a
-amenity		hospital		p	0x0b
-amenity		marketplace             p       undef           0       1      0xf701,0,0
-amenity		parking			p	0x05
-amenity		parking_garage		p	0x06
-amenity         pharmacy                p       0x06e,3         0       1      0x2e05,0,1
-amenity		public_building		p	0x6e
-amenity		school			p	0x0a
-amenity		taxi
-amenity		townhall
-amenity		university		p	0x0a
-amenity		kindergarten		p	0x6e
+amenity         arts_centre             p       0x06e,3         0       0      0x2c09
+amenity         bank                    p       0x6d,3          0       0      0x2f06
+amenity         bicycle_parking        
+amenity         cafe                    p       0x6e,3          0       0      0x2A0E,0,0
+amenity         car_rental             
+amenity         car_sharing            
+amenity         car_wash
+amenity         cinema                  p       0x06e,3         0       0      0x2D03
+amenity         college                 p       0x0a,1          0       1      0xf504,0,0
+amenity         dentist                 p       0x06e,3         0       0      0xf801
+amenity         doctors                 p       0x06e,3         0       0      0x4b00
+amenity         fast_food               p       0x06e,3         0       0      0x2a07,0,0
+amenity         fountain               
+amenity         food_court
+amenity         fuel                    p       undef           0       0      0x2f01
+amenity         grave_yard              p       0x1a
+amenity         hospital                p       0x0b,1          0       1      0x3002
+amenity         kindergarten            p       0x0a,1          0       0      0xf501,0,0
+amenity         library                 p       0x06e,3         0       0      0x2c03,0,0
+amenity         marketplace             p       undef           0       1      0xf701,0,0
+amenity         parking                 p       0x05,1          0       1      0x2f0b,0,0
+amenity         parking_garage          p       0x06,1
+amenity         pharmacy                p       0x06e,3         0       0      0x2e05
+amenity         police                  p       0x6d,3          0       0      0x3001
+amenity         post_office             p       0x6d,3          0       0      0x2F05
+amenity         pub                     p       0x06e,3         0       0      0x2D02
+amenity         public_building         p       0x06e,3         0       0
+amenity         restaurant              p       0x06e,3         0       0      0x4500,0,0
+amenity         sauna                   p       0x06e,3         0       0      0xf603,0,0
+amenity         school                  p       0x0a,1          0       1      0x2C05,0,0
+amenity         taxi                   
+amenity         theatre                 p       0x06e,3         0       0      0x2d01
+amenity         townhall               
+amenity         university              p       0x0a,1          0       1      0xf504,0,0
 
+#boundary        administrative
+#place           city                    p       0x01,2          0       4
+#place           town                    p       0x02,2          0       3
+#place           village                 p       0x03,2          0       2
+#place           hamlet                  p       0x03,2          0       2
 #boundary        administrative
 admin_level     10                      p       0x03,1          0       2
 admin_level	8			p	0x02,1		0	2
@@ -38,7 +60,7 @@ admin_level	6			l	0x1d,1		0	3
 admin_level	4			l	0x1c,1		0	4
 admin_level	2			l	0x1e,1		0	4
 admin_level	5			l	0x1d,1		0	3
-boundary	administrative		l	0x1d		2	2
+boundary	administrative		l	0x1d		0	2
 
 barrier		fence			l	0x46		0	0
 barrier		hedge			l	0x46		0	0
@@ -71,6 +93,7 @@ building        residential             p       0x6c            0       0
 building        school                  p       0x6e            0       0
 building        shop                    p       0x6e            0       0
 building        sport                   p       0x6e            0       0
+building        store                   p       0x6e            0       0
 building        theatre                 p       0x6e            0       0
 building        university              p       0x6e            0       0
 
@@ -88,24 +111,28 @@ cycleway	track			l	0x16		0	0
             # RouteParams=speed,class,oneway,toll,emergency,delivery,car,bus,taxi,foot,bike,truck
 
 highway		motorway			r	0x01,2		0	4	6,4,1,0,0,0,0,0,0,0,0,0
-highway		motorway_link		r	0x01,2		0	4	2,4,1,0,0,0,0,0,0,0,0,0
+highway		motorway_link		r	0x09,2		0	4	3,4,1,0,0,0,0,0,0,0,0,0
+highway         motorway_link/city      r       0x09,2          0       2       3,3,1,0,0,0,0,0,0,0,0,0
 
-highway		trunk			r	0x01,2		0	4	5,3,0,0,0,0,0,0,0,0,0,0
-highway		trunk/city      		r	0x04,2		0	4	4,3,0,0,0,0,0,0,0,0,0,0
-highway		trunk_link			r	0x01,2		0	2	2,3,0,0,0,0,0,0,0,0,0,0
+highway		trunk			r	0x01,2		0	4	5,4,0,0,0,0,0,0,0,0,0,0
+highway		trunk/city      		r	0x04,2		0	4	3,3,0,0,0,0,0,0,0,0,0,0
+highway		trunk_link			r	0x09,2		0	2	3,4,0,0,0,0,0,0,0,0,0,0
+highway         trunk_link/city         r       0x09,2          0       2       3,3,0,0,0,0,0,0,0,0,0,0
 
 highway		primary			r	0x02,2		0	3	4,3,0,0,0,0,0,0,0,0,0,0
 highway		primary/city		r	0x04,2		0	3	3,2,0,0,0,0,0,0,0,0,0,0
-highway		primary_link		r	0x02,2		0	3	2,2,0,0,0,0,0,0,0,0,0,0
+highway		primary_link		r	0x08,2		0	3	2,3,0,0,0,0,0,0,0,0,0,0
+highway         primary_link/city       r       0x08,2          0       1       2,2,0,0,0,0,0,0,0,0,0,0
 
-highway		secondary		r	0x03,2		0	2	3,2,0,0,0,0,0,0,0,0,0,0
+highway		secondary		r	0x03,2		0	2	3,3,0,0,0,0,0,0,0,0,0,0
 highway         secondary/city          r       0x05,2          0       1       3,2,0,0,0,0,0,0,0,0,0,0
-highway		secondary_link		r	0x03,2		0	2	2,1,1,0,0,0,0,0,0,0,0,0
+highway		secondary_link		r	0x08,2		0	2	2,3,1,0,0,0,0,0,0,0,0,0
+highway         secondary_link/city     r       0x08,2          0       1       2,2,0,0,0,0,0,0,0,0,0,0
 
-highway		tertiary		r	0x03,2		0	1	3,1,0,0,0,0,0,0,0,0,0,0
+highway		tertiary		r	0x03,2		0	1	3,2,0,0,0,0,0,0,0,0,0,0
 highway         tertiary/city           r       0х06,2          0       1       3,1,0,0,0,0,0,0,0,0,0,0
 
-highway		unclassified		r	0x0a,2		0	1	2,1,0,0,0,0,0,0,0,0,0,0
+highway		unclassified		r	0x42,2		0	1	2,2,0,0,0,0,0,0,0,0,0,0
 highway         unclassified/city       r       0x06,2          0       1       2,1,0,0,0,0,0,0,0,0,0,0
 highway		residential		r	0x06,2		0	1	2,0,0,0,0,0,0,0,0,0,0,0
 highway		road			r	0x0a,2		0	1	2,0,0,0,0,0,0,0,0,0,0,0
@@ -116,23 +143,28 @@ surface         unpaved                 r       0x0a,3          0       1       
 surface         ground                  r       0x0a,3          0       1       1,0,0,0,0,0,0,0,0,0,0,0
 
 highway		living_street		r	0x07,1		0	1	1,0,0,0,0,0,0,0,0,0,0,0
-highway		pedestrian		l	0x48,2		0	0
+	#см footway
+highway		pedestrian		l	0x28,2		0	0
 highway		service			r	0x07,2		0	0	1,0,0,0,0,0,0,0,0,0,0,0
 highway		construction		l	0x07,3		0	2
-
-highway		steps			l	0x48,1		0	0
+	#см footway
+highway		steps			l	0x28,1		0	0	0,0,0,0,1,1,1,1,1,0,0,1
 
 highway		unsurfaced		r	0x0a,2		0	1	1,0,0,0,0,0,0,0,0,0,0,0
 
 highway		bridleway		r	0x16,1		0	1	1,0,0,0,1,1,1,1,1,0,0,1
-highway		cycleway		l	0x16,1		0	1
-highway		footway			l	0x48,1		0	0
-highway		path			l	0x48,1		0	0
+	#см footway
+highway		cycleway		l	0x28,1		0	1	0,0,0,0,1,1,1,1,1,0,0,1
+	#если указать правильный тип, то проподают на большом приближении
+	#не роутинговый т.к. мешает навигации
+highway		footway			l	0x28,1		0	0	0,0,0,0,1,1,1,1,1,0,0,1
+highway		path			r	0x48,1		0	1	0,0,0,0,1,1,1,1,1,0,0,1
+highway		path/city			r	0x48,1		0	0	0,0,0,0,1,1,1,1,1,0,0,1
 
 highway		track			r	0x16,1		0	1	1,0,0,0,0,0,0,1,0,0,0,0
 tracktype	grade1			r	0x0a,2		0	1	1,0,0,0,0,0,0,1,0,0,0,0
 tracktype	grade2			r	0x0a,2		0	1	1,0,0,0,0,0,0,1,0,0,0,0
-tracktype	grade3			r	0x16,2		0	1	1,0,0,0,0,0,0,1,0,0,0,0
+tracktype	grade3			r	0x0a,2		0	1	1,0,0,0,0,0,0,1,0,0,0,0
 tracktype	grade4			r	0x16,2		0	1	0,0,0,0,0,0,0,1,0,0,0,0
 tracktype	grade5			r	0x16,2		0	1	0,0,0,0,0,0,0,1,0,0,0,0
 
@@ -141,7 +173,7 @@ railway         platform                r       0x16,1          0       1       
 route		ferry			r	0x1A,2		0	2	0,0,0,0,0,0,0,0,0,0,0,0
 
 junction	roundabout		r	0x0c,3		0	2	4,3,1,0,0,0,0,0,0,0,0,0
-
+junction        roundabout/city         r       0x0c,3          0       2       3,2,1,0,0,0,0,0,0,0,0,0
 
 landuse		allotments		p	0x03		0	2
 landuse         basin                  	p	0x41		0	3
@@ -150,6 +182,8 @@ landuse		cemetery		p	0x1a		0	1
 landuse		commercial		p	0x08		0	2
 landuse		construction
 landuse		farm			p	0x4e		0	2
+landuse         farmland               	p	0x88		0	2
+landuse         farmyard                p       0x03            0       2
 landuse		forest			p	0x50		0	3
 landuse		grass			p	0x0098		0	1
 landuse		greenfield
@@ -163,7 +197,7 @@ landuse		recreation_ground
 landuse         reservoir              	p	0x40		0	3
 landuse		residential		p	0x02,1		0	2
 landuse		retail			p	0x08		0	2
-landuse		village_green
+landuse         village_green           p       0x17            0       1
 
 leisure		common
 leisure		fishing
@@ -175,12 +209,14 @@ leisure		park			p	0x17		0	1
 leisure		pitch			p	0x19		0	1
 leisure		playground
 leisure		sports_centre
-leisure		stadium			p	0x19		0	1
+leisure		stadium			p	0x19		0	0
 leisure		track
 leisure		water_park
 
+man_made        cutline                 l       0x48            0       2
 man_made        pier                    s       0x15
-man_made        pipeline                l       0x28            0       1
+#занят footway-ми
+man_made        pipeline
 man_made	reservoir_covered
 man_made	wastewater_plant
 
@@ -207,21 +243,22 @@ natural		water			p	0x3f		0	3	0x650d,0,2
 natural		wetland			p	0x51		0	3
 natural		wood			p	0x50		0	3
 
-place		city
-place		continent
-place		county
-place		hamlet
-place		island
-place		locality
-place		region
-place		state
-place		suburb
-place		town
-place		village
+place           city                           
+place           continent                      
+place           county                         
+place           hamlet                         
+place           island                         
+place           locality                       
+place           region                         
+place           state                          
+place           suburb                         
+place           town                           
+place           village      
 
-power		generation
-power		line			l	0x29		0	0
-power		sub_station
+power           generation              p       0x0c            0       0
+power           line                    l       0x29            0       0
+power           minor_line              l       0x29            0       0
+power           sub_station             p       0x0c            0       0
 
 railway		rail			l	0x14		0	3
 railway		siding			l	0x14		0	1
@@ -244,6 +281,14 @@ railway		subway
 railway         tram                    l       0x3f		0       0
 railway		turntable
 
+religion        muslim                  p       undef,1         0       0      0xf104
+religion        jewish                  p       undef,1         0       0      0xf105
+religion        buddhist                p       undef,1         0       0      0xf106
+denomination    orthodox                p       undef,1         0       0      0xf101
+denomination    catholic                p       undef,1         0       0      0xf102
+denomination    protestant              p       undef,1         0       0      0xf103
+denomination    evangelical             p       undef,1         0       0      0xf103
+
 route		bus
 route		ferry
 route		flight
@@ -253,9 +298,13 @@ route		ski
 route		subsea
 route		tour
 
+shop            alcohol                 p       0x6e,3          0       1      0x2e00,0,1
 shop            car                     p       0x6e,3          0       1      0x2F07,0,1
+shop            car_repair              p       0x6e,3          0       1      0x2f03,0,1
 shop            convenience             p       0x6e,3          0       1      0x2e06,0,1
+shop            doityourself            p       0x6e,3          0       1      0x2E08,0,1
 shop            furniture               p       0x6e,3          0       1      0x2E09,0,1
+shop            hairdresser             p       0x6e,3          0       1      0xf602,0,1
 shop            kiosk                  
 shop            mall                    p       0x08,3          0       1      0x2E04,0,1
 shop            supermarket             p       0x08,3          0       1      0x2E04,0,1
