--- a/configs/osm2mp-navitel/poly.cfg
+++ b/configs/osm2mp-navitel/poly.cfg
@@ -33,7 +33,7 @@ amenity         hospital                p       0x0b,1          0       1      0
 amenity         kindergarten            p       0x0a,1          0       0      0xf501,0,0
 amenity         library                 p       0x06e,3         0       0      0x2c03,0,0
 amenity         marketplace             p       undef           0       1      0xf701,0,0
-amenity         parking                 p       0x05,1          0       1      0x2f0b,0,0
+amenity         parking                 p       0x05,1          0       0      0x2f0b,0,0
 amenity         parking_garage          p       0x06,1
 amenity         pharmacy                p       0x06e,3         0       0      0x2e05
 amenity         police                  p       0x6d,3          0       0      0x3001
@@ -49,18 +49,16 @@ amenity         townhall
 amenity         university              p       0x0a,1          0       1      0xf504,0,0
 
 #boundary        administrative
-#place           city                    p       0x01,2          0       4
-#place           town                    p       0x02,2          0       3
-#place           village                 p       0x03,2          0       2
-#place           hamlet                  p       0x03,2          0       2
-#boundary        administrative
+place           city                    p       0x01,2          2       4
+place           town                    p       0x02,2          0       3
+place           village                 p       0x03,2          0       2
+place           hamlet                  p       0x03,2          0       2
 admin_level     10                      p       0x03,1          0       2
-admin_level	8			p	0x02,1		0	2
-admin_level	6			l	0x1d,1		0	3
-admin_level	4			l	0x1c,1		0	4
-admin_level	2			l	0x1e,1		0	4
-admin_level	5			l	0x1d,1		0	3
-boundary	administrative		l	0x1d		0	2
+admin_level     8                       p       0x03,1          0       2
+admin_level     6                       l       0x1d,1          2       3
+admin_level     4                       l       0x1c,1          2       4
+admin_level     2                       l       0x1e,1          0       4
+
 
 barrier		fence			l	0x46		0	0
 barrier		hedge			l	0x46		0	0
@@ -158,8 +156,8 @@ highway		cycleway		l	0x28,1		0	1	0,0,0,0,1,1,1,1,1,0,0,1
 	#если указать правильный тип, то проподают на большом приближении
 	#не роутинговый т.к. мешает навигации
 highway		footway			l	0x28,1		0	0	0,0,0,0,1,1,1,1,1,0,0,1
-highway		path			r	0x48,1		0	1	0,0,0,0,1,1,1,1,1,0,0,1
-highway		path/city			r	0x48,1		0	0	0,0,0,0,1,1,1,1,1,0,0,1
+highway		path			l	0x28,1		0	1	0,0,0,0,1,1,1,1,1,0,0,1
+	#см footway
 
 highway		track			r	0x16,1		0	1	1,0,0,0,0,0,0,1,0,0,0,0
 tracktype	grade1			r	0x0a,2		0	1	1,0,0,0,0,0,0,1,0,0,0,0
