--- a/configs/osm2mp-navitel/poly.cfg
+++ b/configs/osm2mp-navitel/poly.cfg
@@ -50,7 +50,7 @@ amenity         university              p       0x0a,1          0       1      0
 
 #boundary        administrative
 place           city                    p       0x01,2          2       4
-place           town                    p       0x02,2          0       3
+place           town                    p       0x02,2          1       3
 place           village                 p       0x03,2          0       2
 place           hamlet                  p       0x03,2          0       2
 admin_level     10                      p       0x03,1          0       2
@@ -128,7 +128,7 @@ highway		secondary_link		r	0x08,2		0	2	2,3,1,0,0,0,0,0,0,0,0,0
 highway         secondary_link/city     r       0x08,2          0       1       2,2,0,0,0,0,0,0,0,0,0,0
 
 highway		tertiary		r	0x03,2		0	1	3,2,0,0,0,0,0,0,0,0,0,0
-highway         tertiary/city           r       0õ06,2          0       1       3,1,0,0,0,0,0,0,0,0,0,0
+highway         tertiary/city           r       0x06,2          0       1       3,1,0,0,0,0,0,0,0,0,0,0
 
 highway		unclassified		r	0x42,2		0	1	2,2,0,0,0,0,0,0,0,0,0,0
 highway         unclassified/city       r       0x06,2          0       1       2,1,0,0,0,0,0,0,0,0,0,0
